Fix issues running deno in windows and add commands to motd

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,11 @@
       "type": "node",
       "program": "${workspaceFolder}/server.ts",
       "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "/home/jpate/.deno/bin/deno",
+      "runtimeExecutable": "deno",
       "runtimeArgs": [
         "run",
         "--unstable",
-        "--inspect-brk",
+        "--inspect",
         "--allow-all"
       ],
       "attachSimplePort": 9229,
