Update to latest Deno and add environment checks
Now compatible with deno 1.36.1

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,13 +13,9 @@
       "runtimeExecutable": "deno",
       "runtimeArgs": [
         "run",
-        "--unstable",
-        "--inspect",
-        "--allow-all"
+        "--unstable"
       ],
-      "attachSimplePort": 9229,
       "outputCapture": "std",
-      //"console": "integratedTerminal",
       "skipFiles": [
         "<node_internals>/**",
         "runtime/**",
