Switch from lifesteal to combat-tp script.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,7 @@
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "deno",
       "runtimeArgs": [
-        "run",
-        "--unstable"
+        "run"
       ],
       "outputCapture": "std",
       "skipFiles": [
