Lifesteal Season 4 (lifestealdatapack)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "deno",
       "runtimeArgs": [
-        "run"
+        "run", "--unstable-cron"
       ],
       "outputCapture": "std",
       "skipFiles": [
